feat: make CiteRight portable by replacing Launch4j with jpackage JRE bundling